--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,6 @@ height: 85%;
 width: 50%;
 float: left;
 height: 100%;
-/*overflow: scroll;*/
 }
 
 #left-panel{
@@ -97,6 +96,7 @@ background: #fff;
 
 #right-panel{
 background: #fff;
+overflow: scroll;
 }
 
 #this-issue{
