--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,11 @@ height: 50px;
 }
 
 #facebook-feed{
-padding: 20px;
+padding-top: 10px;
+padding-left: 20px;
+padding-right: 20px;
+padding-bottom: 20px;
+
 /*border-left: 1px solid #1d1d1b;*/
 border-left: 1px solid #ccc;
 height: 100%;
