--- a/css/style.css
+++ b/css/style.css
@@ -110,13 +110,21 @@ padding: 20px;
 padding: 0 20px;
 }
 
-#about-us-container{
-padding: 20px;
-background: #668ca0;
-color: #fff;
-font-family: 'Open Sans', sans-serif; 
-font-weight: 300;
-line-height: 1.3;
+.aboutus {
+    background: #668ca0;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
+}
+
+#about-us-container {
+    padding: 20px;
+    background: #668ca0;
+    color: #fff;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 300;
+    line-height: 1.3;
 }
 
 .about-us-header, .this-issue-header{
